--- a/080-mcp-basics/tsconfig.json
+++ b/080-mcp-basics/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "nodenext",
+        "rootDir": "./src",
+        "outDir": "./dist",
         "allowImportingTsExtensions": true,
         "rewriteRelativeImportExtensions": true,
         "strict": true,
